# adhoc-ci

./: .gitignore  .gitlab-ci.yml  .stylish-haskell.yaml  CHANGELOG.md  LICENSE  README.md  Vagrantfile  adhoc-ci.cabal  adhoc-ci.yml  build-watch.sh  cabal.project  docker-compose.yml
api/: adhoc-ci-api.cabal
api/app/: Main.hs
api/src/Development/AdhocCi/: Api.hs
api/test/Development/AdhocCi/: ServantClientSpec.hs  ServantQuickCheckSpec.hs
builder/: adhoc-ci-builder.cabal
builder/app/: Main.hs
builder/src/Development/AdhocCi/: Config.hs
builder/test/: HLint.hs
builder/test/Development/: AdhocCiSpec.hs
examples/: hooks.yml
node-builder/: Dockerfile  entrypoint.sh
orchestrator/: build.sh
src/: Main.hs
src/Development/: AdhocCi.hs
src/Development/AdhocCi/: Commands.hs  Config.hs
test/Development/: AdhocCiSpec.hs
test/Development/AdhocCi/: CommandsSpec.hs  ConfigSpec.hs
