cabal-version:       2.4

name:                adhoc-ci
version:             0.1.0
synopsis:            Modern continuous integration
homepage:            https://github.com/sgillespie/adhoc-ci
bug-reports:         https://github.com/sgillespie/adhoc-ci/issues
license:             MIT
license-file:        LICENSE
author:              Sean D Gillespie
maintainer:          sean@mistersg.net
copyright:           (c) 2019 Sean Gillespie
category:            Development
extra-source-files:  CHANGELOG.md, README.md

library
  -- exposed-modules:
  -- other-modules:
  -- other-extensions:
  build-depends:       base ^>= 4.12.0.0,
                       optparse-applicative
  hs-source-dirs:      src
  default-language:    Haskell2010

executable adhoc-ci
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base ^>= 4.12.0.0,
                       optparse-applicative,
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite hlint
  type:                exitcode-stdio-1.0
  main-is:             HLint.hs
  other-modules:       Paths_adhoc_ci
  hs-source-dirs:      test
  ghc-options:         -threaded -with-rtsopts=-N
  build-depends:       base ^>= 4.12.0.0,
                       hlint-test
  default-language:    Haskell2010

test-suite spec
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  hs-source-dirs:      test
  ghc-options:         -threaded -with-rtsopts=-N
  build-depends:       base ^>= 4.12.0.0,
                       hspec,
                       hspec-discover
  default-language:    Haskell2010